[tool.poetry]
name = "goit-python-web-hw02"
version = "0.1.0"
description = ""
authors = ["Oleh Ovchinnikov <112849429+xoka-pro@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "goit_python_web_hw02"}]

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "1.0.1"
tabulate = "0.9.0"
pyowm = "3.3.0"
holidays = "0.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
